# athena-code-examples

./: .gitignore  README.md
long-running-sessions/: .env.example  README.md  pyproject.toml
long-running-sessions/long_running_sessions/: main.py
s3-filesystem/: .env.example  README.md  e2b.Dockerfile  e2b.toml  pyproject.toml
s3-filesystem/s3_filesystem/: bucket.py  functions.py  main.py  system_prompt.py
stream-output/: README.md  compose.yaml
stream-output/server/: .env.example  Dockerfile  README.md  pyproject.toml  sandbox_sessions.sqlite
stream-output/server/server/: db.py  main.py  session_manager.py  work_queue.py
stream-output/webapp/: Dockerfile  package-lock.json  package.json
stream-output/webapp/app/: page.tsx
