[tool.poetry]
name = "s3-filesystem"
version = "0.1.0"
description = ""
authors = ["Vasek Mlejnsky <vasek.mlejnsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
e2b = "^0.13.10"
python-dotenv = "^1.0.0"
openai = "^1.3.8"
boto3 = "^1.33.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 's3_filesystem.main:main'
